$Id: ChangeLog,v 1.153 2006/05/26 15:07:27 manuelbi Exp $

2006-07-30 Manuel Bilderbeek <manuel@msxnet.org>
	* Prepared for release of 0.6.1-R1.

2006-05-26 Manuel Bilderbeek <manuel@msxnet.org>
	* Use 'cart' i.s.o. 'carta' and 'cartb' to specify the cartridges.
	  openMSX now guarantees to place them in slot order, so if we use the
	  generic options, we don't have problems with slotexpanders anymore
	  (which can e.g. take up slot a) and still have the proper order.

2006-05-24 Manuel Bilderbeek <manuel@msxnet.org>
	* Added a hack that puts slotexpander always as first extension, so
	  that it can work with the post 0.6.0 release of openMSX. Let's hope
	  this is enough to keep it working.

2006-04-24 Manuel Bilderbeek <manuel@msxnet.org>
	* Fix compilation for GCC 4.1, thanks to Martin Michlmayr

2006-01-27 Manuel Bilderbeek <manuel@msxnet.org>
	* Small (yet hacky?) fix for the problem that no MSX Type is selected
	  at the very first startup... I hope this is my very last commit on
	  this version of Catapult. Let's go for Qt!
	* Set version to 0.6.0-R2, which includes this fix and a rebuild for
	  Windows, because the FontMap stuff of wxWidgets gives registry
	  problems for some Windows users. Note that this release is only
	  interesting for Windows users.

2006-01-21 Maarten ter Huurne <maarten@treewalker.org>
	* Released 0.6.0-R1.

2006-01-15 Maarten ter Huurne <maarten@treewalker.org>
	* Compile resources on MinGW32 as part of the build process.
	  Implemented in cooperation with BiFi.

2006-01-01 Manuel Bilderbeek <manuel@msxnet.org>
	* Do a cleaner exit if the openMSX binary cannot be found at all
	* Don't continue if the 'check openMSX binary before launch' fails.

2005-12-31 Arnold Metselaar  <arnold.metselaar@planet.nl>
	* Add support for standard options --version and --help, closes
	  bug 1394202.

2005-12-30 Manuel Bilderbeek <manuel@msxnet.org>
	* Check exit status of version test, handle failure.