@@ -1,0 +1,10 @@
+# $Id: cpu-ppc.mk,v 1.1 2004/11/14 18:34:26 h_oudejans Exp $
+#
+# Configuration for PowerPC64 CPUs.
+
+# Big or little endian?
+BIG_ENDIAN:=true
+
+# Default build flavour.
+CATAPULT_FLAVOUR?=ppc64
+
